fix(debug-table): wrong color

--- a/src/app/debug-table/debug-value-single/debug-value-single.component.scss
+++ b/src/app/debug-table/debug-value-single/debug-value-single.component.scss
@@ -25,6 +25,10 @@ $marble-size: 18px;
         font-size: 12px;
         @include all-background-colors;
 
+        &.dimmed {
+          background-color: #999;
+        }
+
         .inner {
           display: inline-block;
         }
